# Yakherd

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py  yakherd.py
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: 2026-07-23_y_proc_1_1_core_1.3.1_implementation_plan.md  2026-07-23_y_proc_1_1_corrective_amendment.md  2026-07-23_y_proc_1_core_1.3_implementation_plan.md  2026-07-23_yakherd_windows_process_hygiene_package.md  ARCHITECTURE.md  ORIGIN.md  RELEASE.md  RETROFIT.md  USAGE.md  task_protocol.md
docs/audits/mosaic-origin/: 2026-07-20_jeff_strict_ssot_package_and_crochet_splatomatic_plan.md  2026-07-20_jeff_strict_ssot_v1_package_implementation.md  2026-07-20_jeff_strict_ssot_v1_package_red_team_prompt.md  2026-07-20_jeff_strict_ssot_v1_package_red_team_recheck.md  2026-07-20_jeff_strict_ssot_v1_package_red_team_recheck_prompt.md  2026-07-20_jeff_strict_ssot_v1_package_red_team_recheck_v2.md  2026-07-20_jeff_strict_ssot_v1_package_red_team_recheck_v3.md  2026-07-20_jeff_strict_ssot_v1_package_red_team_review.md  2026-07-20_jeff_strict_ssot_v1_package_release_authentication.md  README.md
docs/demo/cold-resume/: README.md  evidence.json  (+4 more)
scripts/: regenerate_release.py  render_cold_resume_demo.py  verify_distribution.py  verify_release.py
src/yakherd/: __init__.py  __main__.py  cli.py  process_hygiene.py
tests/: test_distribution.py  test_process_hygiene.py
(+16 files in other folders)
