[build-system]
requires = ["setuptools==80.10.1"]
build-backend = "setuptools.build_meta"

[project]
name = "yakherd"
version = "1.2.0"
description = "A product-neutral SSOT governance harness for agentic software projects"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Jeff" },
]
keywords = ["agentic-coding", "governance", "ssot", "vibe-coding"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = []

[project.scripts]
yakherd = "yakherd.cli:main"

[project.urls]
Homepage = "https://github.com/gigajeff/Yakherd"
Documentation = "https://github.com/gigajeff/Yakherd#readme"
Repository = "https://github.com/gigajeff/Yakherd.git"
Issues = "https://github.com/gigajeff/Yakherd/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
